--- a/teste.html
+++ b/teste.html
@@ -6,6 +6,14 @@
     <title>Testando branches no git</title>
 </head>
 <body>
-    
+    <main>
+        <nav>
+            <ol>
+                <li>menu</li>
+                <li>fotos</li>
+                <li>outros</li>
+            </ol>      
+        </nav>
+    </main>
 </body>
 </html>
