--- a/teste.html
+++ b/teste.html
@@ -14,6 +14,7 @@
                 <li>outros</li>
             </ul>      
         </nav>
+        <bolt>trabalhando o rebase </bolt>
     </main>
 </body>
 </html>
