--- a/teste.html
+++ b/teste.html
@@ -16,5 +16,12 @@
         </nav>
         <bolt>trabalhando o rebase </bolt>
     </main>
+    <navbar>
+        <ul>
+            <li>login</li> 
+            <li>compras</li>
+            <li>pedidos</li>
+        </ul>
+    </navbar>
 </body>
 </html>
