--- a/teste.html
+++ b/teste.html
@@ -9,7 +9,7 @@
     <main>
         <nav>
             <ul>
-                <li><a href="index.html">página seguinte</a></li>
+                <li>menu</li>
                 <li>fotos</li>
                 <li>outros</li>
             </ul>      
