--- a/index.html
+++ b/index.html
@@ -8,5 +8,24 @@
 <body>
     <h1>Salvando arquivo em stash com o <i>(git stash --include-untracked)</i></h1>
     <a href="teste.html">voltar</a>
+    <div>
+        <table border="10">
+            <tr>
+                <th>a</th>
+                <th>b</th>
+                <th>l</th>
+            </tr>
+            <tr>
+                <td>a</td>
+                <td>b</td>
+                <td>l</td>
+            </tr>
+            <tr>
+                <td>a</td>
+                <td>b</td>
+                <td>l</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
