--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página 2</title>
 </head>
-<body>
+<body bgcolor="blue">
     <h1>Salvando arquivo em stash com o <i>(git stash --include-untracked)</i></h1>
     <a href="teste.html">voltar</a>
     <div>
